Alignment fixes for breadcrumbs.

--- a/less/modules/breadcrumbs.less
+++ b/less/modules/breadcrumbs.less
@@ -29,7 +29,7 @@
     &:not(.ui-breadcrumbs-no-sep) {
         & > ul {
             & > li {
-                &:not(:first-child):before { content: "\203A"; ._color-var(breadcrumbs-sep-color); font-size: @font-18; line-height: normal; margin: 0 (@breadcrumbs-sep-size + 3) 0 (@breadcrumbs-sep-size - 2); display: inline-block; }
+                &:not(:first-child):before { content: "\203A"; ._color-var(breadcrumbs-sep-color); font-size: @font-18; vertical-align: middle; line-height: 0; margin: 0 (@breadcrumbs-sep-size + 3) 0 (@breadcrumbs-sep-size - 2); display: inline-block; }
             }
         }
     }
